# Attrangs

./: next.config.js  package-lock.json  package.json
Attrangs_backend/app/: .cpanel.yml  README.md  pyproject.toml
Attrangs_backend/app/app/: main.py
Attrangs_backend/app/app/auth/: auth.py
Attrangs_backend/app/app/crud/: Product_crud.py  crud.py  dependency.py  dummy_product.py
Attrangs_backend/app/app/database/: db.py
Attrangs_backend/app/app/routes/: login.py  product.py  register.py  search_rout.py
Attrangs_backend/app/app/schema/: schema.py
my-app/: README.md  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
my-app/app/: globals.css  layout.tsx  page.tsx
my-app/app/Wishlist/: Wishlist.tsx
my-app/app/addtocart/: layout.tsx
my-app/app/cart/: page.tsx  shopingCart.tsx
my-app/app/components/: blog_detail.tsx  blog_page_navigation.tsx  card.tsx  cartPop.tsx  cart_button.tsx  castCard.tsx  departing.tsx  footer.tsx  header.tsx  more_button.tsx  navarrowbar.tsx  navbar1.tsx  navbar2.tsx  navbar3.tsx  navbar4.tsx  navslide.tsx  pagecard.tsx  related_product.tsx  shownav.tsx  slide.tsx  slideImages.tsx  slideImagesClient.tsx  sliderNavebar.tsx  status.tsx  text1.tsx  title_landingpage.tsx  weeklyBest.tsx  whishlist_button.tsx
my-app/app/data/: slideImageData.ts  slidedata.ts
my-app/app/dresses/: page.tsx
my-app/app/functional_Components/: add_to_cart.tsx
my-app/app/login/: client_layout.tsx  page.tsx
my-app/app/mypage/: dashboard.tsx  page.tsx
my-app/context/: Aouthcontext.tsx
(+70 files in other folders)
